app/deployment.yaml
# hello-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: nicolasvion/www:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
