app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header X-Forwarded-For;
      set_real_ip_from 0.0.0.0/0;
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
  name: mywebsite-ing
spec:
  tls:
  - hosts:
    - mywebsite.com
    secretName: mywebsite-com-tls
  rules:
  - host: mywebsite.com
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
